--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,8 +67,8 @@ dependencies {
   implementation project(":muxstatssdktheoplayer")
 
   // Test against a specific version for consistent tests
-  implementation "com.theoplayer.theoplayer-sdk-android:integration-ads-ima:5.9.1"
-  implementation 'com.theoplayer.theoplayer-sdk-android:core:5.9.1'
+  implementation "com.theoplayer.theoplayer-sdk-android:integration-ads-ima:${project.ext.theoplayerVersion}"
+  implementation "com.theoplayer.theoplayer-sdk-android:core:${project.ext.theoplayerVersion}"
 
   implementation "com.google.code.gson:gson:2.9.1"
   implementation "androidx.constraintlayout:constraintlayout:2.2.0-alpha09"
